--- a/TAuth/Pages/Auth/Index.cshtml
+++ b/TAuth/Pages/Auth/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model object
+﻿@model string
 
 @{
    Layout = null;
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div>
-     wot
+     wot: @Model
 </div>
 </body>
 </html>
